gl31-master/src/test/deca/context/invalid/sansobjet/wrong_if2.deca
// Description:
//    Typage : condition float
//
// Resultats:
//    Ligne 11: un float n'est pas une condition
//
// Historique:
//    cree le 17/01/2021
{
    float f = 2.45e9f;
    if(f){
        print("ok");
    }
}
